feat: implement crud

--- a/src/styles/input.scss
+++ b/src/styles/input.scss
@@ -2,6 +2,7 @@
 .selectBox {
     margin-top: 22px;
     text-align: start;
+    width: 100%;
 
     .label {
         font-family: var(--font-primary);
